Fix FTP directory listing page error by adding "language" key

Also shuffle some test code around so bugs like this can be more easily
noticed by bots.

R=mmenke@chromium.org
BUG=615626

Review-Url: https://codereview.chromium.org/2032903004
Cr-Commit-Position: refs/heads/master@{#398212}

Former-commit-id: d0039e587748cb814324eefb9941a4706ebc5c2c