chrome/common/net/net_resource_provider.cc
@@ -37,6 +37,8 @@ struct LazyDirectoryListerCacher {
                     l10n_util::GetStringUTF16(IDS_DIRECTORY_LISTING_SIZE));
     value.SetString("headerDateModified",
         l10n_util::GetStringUTF16(IDS_DIRECTORY_LISTING_DATE_MODIFIED));
+    value.SetString("language",
+                    l10n_util::GetLanguage(base::i18n::GetConfiguredLocale()));
     value.SetString("listingParsingErrorBoxText",
         l10n_util::GetStringFUTF16(IDS_DIRECTORY_LISTING_PARSING_ERROR_BOX_TEXT,
             l10n_util::GetStringUTF16(IDS_PRODUCT_NAME)));
